Fix height bug using flex wrap. Add real projects.

--- a/styles.css
+++ b/styles.css
@@ -4,12 +4,12 @@
     padding: 0;
 }
 
-html, body {
-    margin: 0;
+html {
     height: 100%;
 }
-
+  
 body {
+    min-height: 100%;
     display: flex;
     flex-direction: column;
 }
@@ -19,7 +19,7 @@ body {
     grid-template-rows: 100%;
     grid-template-columns: auto auto;
     height: 100%;
-    min-height: 100%;
+    flex-grow: 1;
 }
 
 .left-container {
@@ -44,10 +44,6 @@ body {
     align-items: center;
     color: #D8D8D8;
     gap: 1vw;
-}
-
-.link {
-
 }
 
 .right-container {
@@ -75,13 +71,13 @@ body {
     align-items: center;
     gap: .5vw;
     margin-left: 2vw;
-  }
+}
   
-  .icons {
+.icons {
     height: 1.5rem;
-  }
+}
   
-  .search-bar {
+.search-bar {
     border: none;
     background-color: #005F73;
     border-bottom: 2px solid black;
@@ -91,13 +87,13 @@ body {
     padding: .8rem;
     transition: all 0.3s ease;
     border-radius: 5px;
-  }
+}
   
-  .search-bar:focus {
+.search-bar:focus {
     outline: none;
     border-color: #0E8388;
     box-shadow: 0 0 10px #0E8388;
-  }
+}
 
 .profile-container {
     grid-area: 1/3/1/4;
@@ -172,12 +168,12 @@ body {
     padding: 3px;
     padding-left: 5px;
     padding-right: 5px;
-  }
+}
   
-  .controls-container button:hover{
+.controls-container button:hover{
     box-shadow: 0px 0px 5px 2px rgba(255, 255, 255, 0.5);
     transform: scale(1.1);
-  }
+}
 
 .content-container {
     display: grid;
@@ -202,7 +198,7 @@ body {
     background-color: #005F73;
     border-radius: 10px;
     padding: .5vh 1vw;
-    width: 12vw;
+    width: 15vw;
     min-width: 120px;
 }
 
@@ -259,18 +255,19 @@ body {
 .right-sidebar-container {
     display: flex;
     flex-direction: column;
+    gap: 20px;
     grid-area: 1/2/1/3;
     height: 100%;
     justify-content: start;
 }
 
-.announcements-container {
+.announcements-container, .trending-container {
     display: flex;
     flex-direction: column;
     background-color: #0A9396;
 }
 
-.announcements-label {
+.announcements-label, .trending-label {
     font-size: calc(1vw + 1vh);
     margin-top: 1vh;
     margin-bottom: 1vh;
@@ -283,69 +280,36 @@ body {
     min-width: 120px;
 }
 
-.announcement-title {
+.announcement-title, .trending-title {
     font-weight: bold;
     font-size: calc(.8vw + .8vh);
     display:flex;
-    justify-content: center;
+    justify-content: start;
+    align-items: center;
+    flex-wrap: wrap;
     margin: 0px;
     color: #E9D8A6;
+    padding: 5px;
 }
 
-.announcement-text {
+.announcement-text, .trending-text{
     display: flex;
     font-size: calc(.70vw + .70vh);
     justify-content: center;
     margin: 0px;
     padding: 10px;
     color: #E9D8A6;
+    flex-wrap: wrap;
 }
 
-.announcement-cards-container {
+.announcement-cards-container, .trending-cards-container {
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    align-items: center;
-
+    align-items: start;
 }
 
-.announcement-card {
-    border-radius: 10px;
-    margin: 5px;
-    padding: 0;
-    background-color: #BB3E03;
-    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.4);
-}
-
-.trending-container {
-    display: flex;
-    flex-direction: column;
-    background-color: #0A9396;
-}
-
-.trending-label {
-    font-size: calc(1vw + 1vh);
-    margin-top: 1vh;
-    margin-bottom: 1vh;
-    margin-left: 2vw;
-    color: #E9D8A6;
-    background-color: #005F73;
-    border-radius: 10px;
-    padding: .5vh 1vw;
-    width: 12vw;
-    min-width: 120px;
-}
-
-.trending-cards-container {
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    align-items: center;
-    
-
-}
-
-.trending-card {
+.announcement-card, .trending-card{
     border-radius: 10px;
     margin: 5px;
     padding: 0;
@@ -385,7 +349,7 @@ body {
     top: -30px;
     left: 50%;
     transform: translateX(-50%);
-  }
+}
 
 #git-icon:hover::after {
     content: "View on Github";
@@ -397,7 +361,7 @@ body {
     top: -30px;
     left: 50%;
     transform: translateX(-50%);
-  }
+}
 
 #dashboard-text {
     font-size: clamp(12px, calc(2vw + 2vh), 48px);
@@ -447,11 +411,11 @@ body {
     justify-content: center;
     align-items: center;
     background-color: rgba(187, 62, 3);
-  }
+}
 
 #cardContent {
     height: 300px;
-  }
+}
 
 .close {
     position: fixed;
@@ -500,7 +464,7 @@ body {
     display: flex;
     flex-direction: column;
     background-color: #BB3E03;
-  }
+}
   
 #card-enlarged-view>.card-title {
     display: flex;
@@ -509,14 +473,14 @@ body {
     font-weight: bold;
     font-size: calc(2vw + 2vh);
     margin: 5px;
-  }
+}
 
 #card-enlarged-view>.card-text {
     font-size: calc(1vw + 1vh);
     margin: 10px;
     overflow: hidden;
     text-overflow: ellipsis;
-  }
+}
   
 #card-enlarged-view .card-icon-container {
     display:flex;
@@ -534,15 +498,15 @@ body {
     top: 5px;
     right: 5px;
     cursor: pointer;
-  }
+}
 
 .no-cards-message {
     text-align: center;
     font-size: 1.5rem;
     color: #005F73;
-  }
+}
 
- .toggle-button {
+.toggle-button {
     display: none; /* Initially, keep the button hidden */
     font-size: 14px;
     background-color: transparent;
@@ -581,7 +545,6 @@ body {
     .main-container {
         grid-template-columns: 1fr; /* Adjust the layout for smaller screens */
     }
-
 }
 
 
